# green-todo

./: .gitignore  CLAUDE.md  README.md  TODO.md  app.js  generate-icon.js  index.html  main.js  package-lock.json  package.json  preload.js  styles.css  tauri-bridge.js
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  tray_icon.rs
web/: app.js  index.html  styles.css  tauri-bridge.js
